# infomaniak

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  example.py  infomaniak_cli.py  pyproject.toml  test.py
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: .gitignore  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/src/: api-examples.md  chk.md  index.md
docs/src/ai/: index.md  todo.md
docs/src/backup/: todo.md
docs/src/cloud/: config.md  database.md  index.md  projects.md  todo.md
docs/src/core/: actions.md  (+2 more)
infomaniak/: __init__.py  __main__.py  _base.py  api.py  base.py  cli.py  client.py  config.py  constants.py  pagination.py  register.py  resource.py  utils.py
infomaniak/clients/: __root__.py  base.py  sync.py
infomaniak/errors/: __init__.py  app.py  base.py  reports.py  validation.py
infomaniak/models/: __init__.py  core.py  database.py  dns.py  kubernetes.py  vm.py
infomaniak/resources/: __init__.py  chk.py  databases.py  dns.py  groups.py  kubernetes.py  vms.py
infomaniak_cli/: __init__.py  __main__.py  api.py  cli.py  config.py
infomaniak_cli/commands/: audit.py  config.py  dns.py  domains.py  mail.py  products.py  propagation.py  setup.py  status.py  zone.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_errors.py  test_integration.py  test_output.py  test_sample.py  test_sdk_models.py
tests/commands/: test_audit.py  test_config.py  test_dns.py  test_domains.py  test_mail.py  test_products.py  test_propagation.py  test_status.py  test_zone.py
(+285 files in other folders)
