[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infomaniak"
version = "0.7.0"
description = "Python client library for the Infomaniak API with a minimal token-page helper CLI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Doruk Tan Ozturk", email = "peak@peaktwilight.com" },
]
keywords = ["infomaniak", "sdk", "library", "dns", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "dacite>=1.9.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/peaktwilight/infomaniak-cli"
Repository = "https://github.com/peaktwilight/infomaniak-cli"
Issues = "https://github.com/peaktwilight/infomaniak-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
infomaniak = "infomaniak:main"

[tool.setuptools.packages.find]
include = ["infomaniak*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
